Revert "fix: removed dark mode transistion"
This reverts commit e5a5c70b93feb7e5a32cb44df741601c82d09aef.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+html.color-theme-in-transition,
+html.color-theme-in-transition *,
+html.color-theme-in-transition *:before,
+html.color-theme-in-transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important;
+}
 
 body {
     --primary-color: #0faca4;
